# rust-ecommerce-app

./: .gitignore  Cargo.toml  check.txt  package.json  webpack.config.js
npm_src/: index.js  input-admin.css  input-frontend.css
npm_src/modules/: countdown.js  cpf-cnpj.js  field-validation.js  search.js
public/: style.css
public/css/: admin.css  frontend.css
public/js/: address-autocomplete.js  admin-action-dropdown.js  admin-checkbox-selector.js  app.js
src/: helpers.rs  lib.rs  main.rs
src/backend/components/: admin-edit-account-modal.html  admin_edit_account_modal.rs  mod.rs
src/backend/layouts/: admin_layout.rs  mod.rs
src/backend/templates/: admin-forgot-password.html  admin-login.view.html  admin-reset-password.html  admin_account.rs  admin_add_customer.rs  admin_add_order.rs  admin_add_product.rs  admin_customer_details.rs  admin_customers.rs  admin_dashboard.rs  admin_edit_product.rs  admin_emails.rs  admin_forgot_password.rs  admin_login.rs  admin_order_details.rs  admin_orders.rs  admin_products.rs  admin_reset_password.rs  admin_settings.rs  mod.rs
src/emails/: mailer.rs  mod.rs
src/emails/templates/: mod.rs  password_reset.rs
src/emails/templates/customer/: mod.rs  welcome.rs
src/emails/templates/shared/: mod.rs  password_reset.rs
src/frontend/: mod.rs
src/frontend/components/: footer.rs  header.rs  mod.rs  side_cart.html
src/frontend/templates/: homepage.rs  mod.rs
src/middlewares/: auth.rs  csrf.rs  csrf_middleware.rs  csrf_verification.rs  mod.rs
src/migrations/: 0001_create_admins_table.sql  0002_create_customers_table.sql  0003_create_addresses_table.sql  0004_create_categories_table.sql  0005_create_products_table.sql  0006_create_attributes_table.sql  0007_create_attribute_groups_table.sql  0008_create_attribute_options_table.sql  0009_create_sessions_table.sql  001_create_email_logs_table.sql  002_create_admins_table.sql  003_create_customers_table.sql  004_create_addresses_table.sql  005_create_categories_table.sql  006_create_products_table.sql  007_create_attributes_table.sql  008_create_attribute_groups_table.sql  009_create_attribute_options_table.sql  010_create_attribute_fees_table.sql  011_create_carts_table.sql  012_create_cart_items_table.sql  013_create_cart_item_options_table.sql  014_create_orders_table.sql  015_create_order_items_table.sql  016_create_order_item_options_table.sql
src/models/: address.rs  admin.rs  category.rs  customer.rs  form_field.rs  mod.rs  order.rs  product.rs
src/server/: backend_handlers.rs  frontend_handlers.rs  mod.rs  routes.rs
src/server/handlers/backend/: auth.rs  catalog.rs  customers.rs  emails.rs  mod.rs  orders.rs  payloads.rs  system.rs
src/server/handlers/frontend/: auth.rs  cart.rs  catalog.rs  customer.rs  mod.rs
src/shared/: mod.rs
src/shared/layouts/: blank_layout.rs  mod.rs
src/shared/templates/: mod.rs
src/utils/: brazilian_states.rs  context.rs  cpf_cnpj.rs  errors.rs  helpers.rs  hypertext_elements.rs  mod.rs  password.rs
