[package]
name = "rust-ecommerce-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hypertext = { version = "0.12", features = ["alpine", "axum"] }
