[package]
name = "rust-ecommerce-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower-sessions = { version = "0.14" }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = [
    "serde",
    "macros",
    "formatting",
    "parsing",
    "local-offset",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hypertext = { version = "0.12", features = ["alpine", "axum"] }
dotenvy = "0.15"
argon2 = "0.5"
validator = { version = "0.20", features = ["derive"] }
