[package]
name = "rust-ecommerce-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core / Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework & Middleware
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["cookie"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
hypertext = { version = "0.12", features = ["alpine", "axum"] }

# Database & Sessions
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "postgres",
    "rust_decimal",
    "uuid",
    "time",
] }
tower-sessions = { version = "0.14" }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Security & Validation
argon2 = "0.5"
rand = "0.10"
sha2 = "0.11"
validator = { version = "0.20", features = ["derive"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
base64 = "0.22"
dotenvy = "0.15"
lettre = { version = "0.11", features = [
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
    "serde",
] }
time = { version = "0.3", features = [
    "macros",
    "formatting",
    "parsing",
    "serde",
] }
uuid = { version = "1", features = ["v4"] }
